--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-sparklines": "^1.7.0",
     "spinners-react": "^1.0.11"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-sparklines": "^1.7.5",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
     "typescript": "^5"
